# SHC09_Hover_att

./: acro_alt_hold_work_plan.md
DuctedFanUAV-Autopilot/src/lib/control_allocation/actuator_effectiveness/: ActuatorEffectiveness.hpp
DuctedFanUAV-Autopilot/src/lib/control_allocation/control_allocation/: CMakeLists.txt  ControlAllocation.cpp  ControlAllocation.hpp  ControlAllocationLPCA.cpp  ControlAllocationLPCA.hpp
DuctedFanUAV-Autopilot/src/lib/tensorflow_lite_micro/tflite_micro/: README.PX4.md
DuctedFanUAV-Autopilot/src/modules/control_allocator/: CMakeLists.txt  ControlAllocator.cpp  ControlAllocator.hpp  module.yaml
DuctedFanUAV-Autopilot/src/modules/control_allocator/VehicleActuatorEffectiveness/: ActuatorEffectivenessCustom.cpp  ActuatorEffectivenessDuctedFan.cpp  ActuatorEffectivenessDuctedFan.hpp  ActuatorEffectivenessDuctedFanTailsitterVTOL.cpp  ActuatorEffectivenessDuctedFanTailsitterVTOL.hpp  CMakeLists.txt
DuctedFanUAV-Autopilot/src/modules/df_hover_rate_control/: CMakeLists.txt  DfHoverRateControl.cpp  DfHoverRateControl.hpp  Kconfig  module.yaml
DuctedFanUAV-Autopilot/src/modules/df_hover_rate_control/IndiControl/: IndiControl.cpp  IndiControl.hpp
DuctedFanUAV-Autopilot/src/modules/logger/: logged_topics.cpp
DuctedFanUAV-Autopilot/src/modules/mc_att_control/AttitudeControl/: AttitudeControl.cpp
DuctedFanUAV-Autopilot/src/modules/mc_pos_control/: CMakeLists.txt  MulticopterPositionControl.cpp  MulticopterPositionControl.hpp  multicopter_acceleration_indi_params.yaml
DuctedFanUAV-Autopilot/src/modules/mc_pos_control/PositionControl/: PositionControl.cpp  PositionControl.hpp
DuctedFanUAV-Autopilot/src/modules/simulation/gz_plugins/ductedfan/: CMakeLists.txt  DuctedFanPlugin.cpp  DuctedFanPlugin.hpp  Spline.cpp  Spline.hpp  TorqueDisturbancePlugin.cpp  TorqueDisturbancePlugin.hpp
DuctedFanUAV-Autopilot/src/modules/simulation/gz_plugins/ductedfan_liftdrag/: CMakeLists.txt  DuctedFanLiftDrag.cpp  DuctedFanLiftDrag.hpp
DuctedFanUAV-Autopilot/src/modules/vtol_att_control/: tailsitter.cpp  tailsitter.h
airframes/: 22005_gazebo-classic_SHC09
(+63 files in other folders)
